--- a/source/sass/blocks/navigation.scss
+++ b/source/sass/blocks/navigation.scss
@@ -15,7 +15,20 @@
 }
 
 .navigation__link {
-  padding: 10px 0;
+  position: relative;
+  padding: 5px 0;
   color: #ffffff;
   text-decoration: none;
+
+  &--current {
+    &::before {
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      content: "";
+      width: 100%;
+      height: 2px;
+      background-color: #ffffff;
+    }
+  }
 }
