--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -4,8 +4,17 @@
   list-style-type: none;
   display: flex;
   flex-wrap: wrap;
+  align-items: center;
   gap: 30px;
   max-width: 175px;
+
+  &--contacts {
+    gap: 25px;
+
+    .social__icon {
+      fill: #2a2a2a;
+    }
+  }
 }
 
 .social__icon {
